# template-fastapi-svelte

./: pyproject.toml
.run/: dev.run.xml  main.run.xml  run.run.xml
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: main.ts
front/src/components/: App.svelte
src/app/: __init__.py  __main__.py  app.py  cli.py
src/backend/: __init__.py  __main__.py  _app.py  _cli.py  _dev.py  _vite.py
templates/: index.jinja2
