[project]
name = "template-fastapi-svelte"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.5",
    "requests>=2.32.3",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "websockets>=14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv.sources]
template-fastapi-svelte = { workspace = true }

[dependency-groups]
dev = [
    "template-fastapi-svelte",
]
